[package]
name = "aitch"
authors = ["Benjamin J. Arthur <bjarthur70@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A scheduler for jobs allocating heterogenous resources on a single machine"
readme = "README.md"
license-file = "LICENSE.txt"
repository = "https://github.com/JaneliaSciComp/aitch"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
fslock = "0.2.1"
itertools = "0.10.5"
shell-words = "1.1.0"
sysinfo = "0.26.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
